--- a/data/cards/16227633.yaml
+++ b/data/cards/16227633.yaml
@@ -1,7 +1,7 @@
 konami_id: 19369
 password: 16227633
 name:
-  en: Memento Bone Back
+  en: Mementotlan Bone Back
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a face-up "Memento" monster(s) you control leaves the field because of an opponent's card: Special Summon 1 "Mementoral Tecuhtlica, the Netherskull Dragon" from your hand or Deck, ignoring its Summoning conditions. If your opponent moves a "Memento" monster(s) out of your GY while this card is in your GY (except during the Damage Step): You can banish this card; Special Summon as many "Memento" monsters as possible with different names from your hand and/or Deck. You can only use each effect of "Memento Bone Back" once per turn.
+    If a face-up "Memento" monster(s) you control leaves the field because of an opponent's card: Special Summon 1 "Mementoal Tecuhtlica - Combined Creation" from your hand or Deck, ignoring its Summoning conditions. If your opponent moves a "Memento" monster(s) out of your GY while this card is in your GY (except during the Damage Step): You can banish this card; Special Summon as many "Memento" monsters as possible with different names from your hand and/or Deck. You can only use each effect of "Mementotlan Bone Back" once per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoBoneBack-DBVS-JP-C.png
+  image: MementotlanBoneBack-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP010
@@ -44,8 +44,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992711
