--- a/data/cards/18165869.yaml
+++ b/data/cards/18165869.yaml
@@ -1,7 +1,7 @@
 konami_id: 19363
 password: 18165869
 name:
-  en: Memento Dark Blade
+  en: Mementotlan Dark Blade
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can discard 1 "Memento" card, then target 1 Spell/Trap your opponent controls; destroy it. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, Special Summon 1 Level 3 or lower "Memento" monster from your Deck. You can only use each effect of "Memento Dark Blade" once per turn.
+    If this card is Normal or Special Summoned: You can discard 1 "Memento" card, then target 1 Spell/Trap your opponent controls; destroy it. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, Special Summon 1 Level 3 or lower "Memento" monster from your Deck. You can only use each effect of "Mementotlan Dark Blade" once per turn.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ series:
 - Dark Blade
 images:
 - index: 1
-  image: MementoDarkBlade-DBVS-JP-SR.png
+  image: MementotlanDarkBlade-DBVS-JP-SR.png
 sets:
   ja:
   - set_number: DBVS-JP004
@@ -48,8 +48,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 1002411
