--- a/data/cards/23288411.yaml
+++ b/data/cards/23288411.yaml
@@ -1,7 +1,7 @@
 konami_id: 19360
 password: 23288411
 name:
-  en: Mementoral Tecuhtlica, the Netherskull Dragon
+  en: Mementoal Tecuhtlica - Combined Creation
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoralTecuhtlicatheNetherskullDragon-DBVS-JP-UR.png
+  image: MementoalTecuhtlicaCombinedCreation-DBVS-JP-UR.png
 sets:
   ja:
   - set_number: DBVS-JP001
@@ -48,8 +48,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992697
