--- a/data/cards/32295838.yaml
+++ b/data/cards/32295838.yaml
@@ -8,7 +8,7 @@ name:
   it: Digitron
   pt: Digitron
   ja: デジトロン
-  ja_romaji: Dijitoron
+  ja_romaji: Dejitoron
   ko: 디지트론
   ko_rr: Dijiteuron
   zh-TW:
