--- a/data/cards/43215738.yaml
+++ b/data/cards/43215738.yaml
@@ -1,7 +1,7 @@
 konami_id: 19370
 password: 43215738
 name:
-  en: Memento Fracture Dance
+  en: Mementotlan Fracture Dance
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Memento" monster: Target 1 card on the field; destroy it, then, if you control "Mementoral Tecuhtlica, the Netherskull Dragon", you can destroy 1 more card on the field. When an attack is declared involving your "Memento" monster and an opponent's monster: You can banish this card from your GY; all face-up monsters your opponent currently controls lose 1000 ATK until the end of this turn. You can only use each effect of "Memento Fracture Dance" once per turn.
+    If you control a "Memento" monster: Target 1 card on the field; destroy it, then, if you control "Mementoal Tecuhtlica - Combined Creation", you can destroy 1 more card on the field. When an attack is declared involving your "Memento" monster and an opponent's monster: You can banish this card from your GY; all face-up monsters your opponent currently controls lose 1000 ATK until the end of this turn. You can only use each effect of "Mementotlan Fracture Dance" once per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoFractureDance-DBVS-JP-C.png
+  image: MementotlanFractureDance-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP011
@@ -44,8 +44,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992715
