--- a/data/cards/43338320.yaml
+++ b/data/cards/43338320.yaml
@@ -1,7 +1,7 @@
 konami_id: 19367
 password: 43338320
 name:
-  en: Netherskull Temple - Mementolan
+  en: Mementomictlan
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If your "Memento" monster battles, your opponent cannot activate Spell/Trap Cards until the end of the Damage Step. If a monster(s) you control is destroyed by battle or card effect: You can target 1 of them; Special Summon 1 "Memento" monster with a lower Level from your hand or GY. You can only use this effect of "Netherskull Temple - Mementolan" once per turn. Once per turn, during your End Phase: You can target 1 "Memento" Spell/Trap in your GY; Set it.
+    If your "Memento" monster battles, your opponent cannot activate Spell/Trap Cards until the end of the Damage Step. If a monster(s) you control is destroyed by battle or card effect: You can target 1 of them; Special Summon 1 "Memento" monster with a lower Level from your hand or GY. You can only use this effect of "Mementomictlan" once per turn. Once per turn, during your End Phase: You can target 1 "Memento" Spell/Trap in your GY; Set it.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: NetherskullTempleMementolan-DBVS-JP-C.png
+  image: Mementomictlan-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP008
@@ -44,8 +44,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992709
