--- a/data/cards/55272555.yaml
+++ b/data/cards/55272555.yaml
@@ -1,7 +1,7 @@
 konami_id: 19361
 password: 55272555
 name:
-  en: Memento Horn Dragon
+  en: Mementotlan-Horned Dragon
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you have 3 or more "Memento" monsters with different names in your GY, you can Special Summon this card (from your hand). You can only Special Summon "Memento Horn Dragon" once per turn this way. If this card on the field is destroyed by card effect: You can target 3 face-up cards on the field, including a "Memento" card you control; destroy them. You can only use this effect of "Memento Horn Dragon" once per turn.
+    If you have 3 or more "Memento" monsters with different names in your GY, you can Special Summon this card (from your hand). You can only Special Summon "Mementotlan-Horned Dragon" once per turn this way. If this card on the field is destroyed by card effect: You can target 3 face-up cards on the field, including a "Memento" card you control; destroy them. You can only use this effect of "Mementotlan-Horned Dragon" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoHornDragon-DBVS-JP-C.png
+  image: MementotlanHornedDragon-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP002
@@ -48,8 +48,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992699
