--- a/data/cards/63251695.yaml
+++ b/data/cards/63251695.yaml
@@ -8,7 +8,7 @@ name:
   it: Dinofoschia Rex
   pt: Dinonévoa Rex
   ja: ダイナミスト・レックス
-  ja_romaji: Dainamisuto Rekksu
+  ja_romaji: Dainamisuto Rekkusu
   ko: 다이너미스트 렉스
   ko_rr:
   zh-TW:
