--- a/data/cards/81677154.yaml
+++ b/data/cards/81677154.yaml
@@ -1,7 +1,7 @@
 konami_id: 19362
 password: 81677154
 name:
-  en: Memento Tatsunootoshigo
+  en: Mementotlan Tatsunootoshigo
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control no face-up monsters other than "Memento" monsters: You can Special Summon this card from your hand. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, send any number of "Memento" monsters with different names from each other from your Deck to the GY whose total Levels are less than or equal to the destroyed monster's original Level. You can only use each effect of "Memento Tatsunootoshigo" once per turn.
+    If you control no face-up monsters other than "Memento" monsters: You can Special Summon this card from your hand. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, send any number of "Memento" monsters with different names from each other from your Deck to the GY whose total Levels are less than or equal to the destroyed monster's original Level. You can only use each effect of "Mementotlan Tatsunootoshigo" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoTatsunootoshigo-DBVS-JP-SR.png
+  image: MementotlanTatsunootoshigo-DBVS-JP-SR.png
 sets:
   ja:
   - set_number: DBVS-JP003
@@ -47,8 +47,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992702
