--- a/data/rush/yugipedia1024897.yaml
+++ b/data/rush/yugipedia1024897.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札１枚をデッキの下に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -29,13 +30,14 @@ effect_types:
 effect:
   en: |-
     ● Shuffle cards from your opponent's Graveyard into the Deck, up to [the number of face-up Celestial Warrior Type monsters on your field] x 2.
-    ● Add 1 Level 4 or lower LIGHT or DARK Attribute monster or 1 "Skysavior Wish" from your Graveyard to your hand.
+    ● Add 1 Level 4 or lower LIGHT Attribute or DARK Attribute monster or 1 "Skysavior Wish" from your Graveyard to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    ●相手の墓地のカードを［自分フィールドの表側表示モンスター（天界戦士族）の数］×２枚まで選んでデッキに戻す。●自分の墓地のモンスター（レベル４以下／光属性・闇属性）１体または「蒼救の願い」１枚を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
@@ -53,7 +55,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「蒼救騎士 ランガ」＋「蒼救天使 ソレイル」
   ko:
   zh-TW:
   zh-CN:
