--- a/data/cards/80722024.yaml
+++ b/data/cards/80722024.yaml
@@ -1,7 +1,7 @@
 konami_id: 19368
 password: 80722024
 name:
-  en: Memento Bone Party
+  en: Mementotlan Bone Party
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Destroy 1 "Memento" monster in your hand or face-up field, and if you do, take 1 "Memento" monster with a different name from your Deck, and either add it to your hand or Special Summon it in Defense Position. During your Main Phase: You can banish this card from your GY, then target 1 "Memento" monster you control; if it attacks a Defense Position monster this turn, inflict piercing battle damage to your opponent. You can only use each effect of "Memento Bone Party" once per turn.
+    Destroy 1 "Memento" monster in your hand or face-up field, and if you do, take 1 "Memento" monster with a different name from your Deck, and either add it to your hand or Special Summon it in Defense Position. During your Main Phase: You can banish this card from your GY, then target 1 "Memento" monster you control; if it attacks a Defense Position monster this turn, inflict piercing battle damage to your opponent. You can only use each effect of "Mementotlan Bone Party" once per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoBoneParty-DBVS-JP-SR.png
+  image: MementotlanBoneParty-DBVS-JP-SR.png
 sets:
   ja:
   - set_number: DBVS-JP009
@@ -43,8 +43,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992710
