--- a/data/cards/81945676.yaml
+++ b/data/cards/81945676.yaml
@@ -1,7 +1,7 @@
 konami_id: 19365
 password: 81945676
 name:
-  en: Memento Mace
+  en: Mementotlan Mace
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your opponent's Main Phase, if you control "Mementoral Tecuhtlica, the Netherskull Dragon" (Quick Effect): You can discard this card, then target 1 face-up monster your opponent controls; take control of it until the End Phase. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, add 1 "Memento" card from your Deck to your hand, except "Memento Mace". You can only use each effect of "Memento Mace" once per turn.
+    During your opponent's Main Phase, if you control "Mementoal Tecuhtlica - Combined Creation" (Quick Effect): You can discard this card, then target 1 face-up monster your opponent controls; take control of it until the End Phase. During your Main Phase: You can destroy 1 "Memento" monster you control, and if you do, add 1 "Memento" card from your Deck to your hand, except "Mementotlan Mace". You can only use each effect of "Mementotlan Mace" once per turn.
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Memento
 images:
 - index: 1
-  image: MementoMace-DBVS-JP-C.png
+  image: MementotlanMace-DBVS-JP-C.png
 sets:
   ja:
   - set_number: DBVS-JP006
@@ -49,8 +49,6 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 992706
