--- a/rush.yaml
+++ b/rush.yaml
@@ -73909,7 +73909,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of face-up DARK Attribute monsters on your field] x 300 until the end of this turn. Then, if your opponent has a face-up LIGHT Attribute monster on their field, this card gains 600 ATK until the end of this turn.
+    This card gains ATK equal to [the number of face-up DARK Attribute monsters on your field] x 300 until the end of this turn. Then, it gains additional 600 ATK until the end of this turn, if your opponent has a face-up LIGHT Attribute monster on their field.
   de:
   es:
   fr:
@@ -109814,7 +109814,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 500 ATK. Also, if you have 5 or more Wyrm Type monsters in your Graveyard, the equipped monster gains additional 500 ATK.
+    The equipped monster gains 500 ATK. Also, it gains additional 500 ATK, if you have 5 or more Wyrm Type monsters in your Graveyard.
   de:
   es:
   fr:
