--- a/rush.yaml
+++ b/rush.yaml
@@ -108675,7 +108675,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. This turn, you cannot activate monster effects, except WIND Attribute Warrior Type or Beast Type monsters.
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You cannot activate the monster effects of non-WIND Attribute non-Warrior Type or non-Beast Type monsters this turn.
   de:
   es:
   fr:
