--- a/rush.yaml
+++ b/rush.yaml
@@ -6125,6 +6125,10 @@ sets:
     set_name: '"Red-Eyes Black Dragon Secret Rare Special Blue Version" GET Campaign'
     rarities:
     - Secret Rare
+  - set_number: RD/P000-JP003
+    set_name: Dragons Duel Tournament prize card
+    rarities:
+    - Rush Rare
   ko:
   - set_number: RD/PR01-KR001
     set_name: Rush Duel Launch Commemorative Pack
@@ -26414,7 +26418,7 @@ images:
   image: GrandExtreme-RDVSP1-JP-C.png
   illustration: GrandExtreme-DBR-JP-VG-artwork.png
 - index: 2
-  image: GrandExtreme-RDS23P-JP-OP.png
+  image: GrandExtreme-RDS23P-JP-UPR.png
 sets:
   ja:
   - set_number: RD/KP04-JP049
@@ -124734,3 +124738,66 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1024897
+---
+konami_id:
+name:
+  en: Pure Love Angel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ピュアラヴ・エンジェル
+  ja_romaji: Pyuaravu Enjeru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card cannot be destroyed by battle with a monster with 2500 or more ATK. If this card battles a Level 9 or lower monster, you take no battle damage.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 3
+atk: 0
+def: 0
+images:
+- index: 1
+  image: PureLoveAngel-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP030
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1025055
