--- a/data/rush/yugipedia1023775.yaml
+++ b/data/rush/yugipedia1023775.yaml
@@ -68,6 +68,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
