--- a/data/rush/yugipedia1020974.yaml
+++ b/data/rush/yugipedia1020974.yaml
@@ -55,6 +55,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
