--- a/data/rush/yugipedia1004612.yaml
+++ b/data/rush/yugipedia1004612.yaml
@@ -49,6 +49,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
