--- a/data/rush/yugipedia1025108.yaml
+++ b/data/rush/yugipedia1025108.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: 隕石竜の雛
-  ja_romaji:
+  ja: <ruby>隕<rt>いん</rt></ruby><ruby>石<rt>せき</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>の<ruby>雛<rt>ひな</rt></ruby>
+  ja_romaji: Insekiryū no Hina
   ko:
   ko_rr:
   zh-TW:
