--- a/data/cards/88264978.yaml
+++ b/data/cards/88264978.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Reddoaizu Dākunesu Metaru Doragon
   ko: 붉은 눈의 암흑 메탈 드래곤
   ko_rr: Bulk-eun Nun-ui Amheuk Metal Deuraegon
-  zh-TW: 真紅眼暗鐵龍
+  zh-TW: 眞紅眼暗鐵龍
   zh-CN: 真红眼暗铁龙
 text:
   en: |-
@@ -31,7 +31,7 @@ text:
   ko: |-
     이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드는 자신 필드의 앞면 표시 드래곤족 몬스터 1장을 제외하고, 패에서 특수 소환할 수 있다. ②: 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 묘지에서 "붉은 눈의 암흑 메탈 드래곤" 이외의 드래곤족 몬스터 1장을 고르고 특수 소환한다.
   zh-TW: |-
-    此卡可將我方場上以表側表示存在的1隻龍族怪獸從遊戲中除外，並從手牌特殊召喚。1回合1次，於我方主要階段時可從我方手牌、墓地中挑選1隻「真紅眼暗鐵龍」以外的龍族怪獸特殊召喚。
+    此卡可將我方場上以表側表示存在的1隻龍族怪獸從遊戲中除外，並從手牌特殊召喚。1回合1次，於我方主要階段時可從我方手牌、墓地中挑選1隻「眞紅眼暗鐵龍」以外的龍族怪獸特殊召喚。
   zh-CN: |-
     此卡名以①方法的特殊召唤1回合仅可进行1次，且②效果1回合仅可使用1次。①：将自己场上的1只表侧表示的龙族怪兽除外，可从手牌特殊召唤此卡。②：在自己的主要阶段可以发动。从自己的手牌・墓地挑选1只"真红眼暗铁龙"以外的龙族怪兽特殊召唤。
 card_type: Monster
