--- a/data/rush/19101.yaml
+++ b/data/rush/19101.yaml
@@ -40,6 +40,9 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Unclassified
+- Effect
 effect:
   en: |-
     This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
