--- a/data/rush/19100.yaml
+++ b/data/rush/19100.yaml
@@ -40,6 +40,9 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Unclassified
+- Effect
 effect:
   en: |-
     Until the end of your opponent's next turn, this card's name becomes "Harpie Lady", and your opponent cannot activate Trap Cards when this card declares an attack.
