--- a/data/rush/yugipedia1025108.yaml
+++ b/data/rush/yugipedia1025108.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（地属性／ドラゴン族／攻撃力１８００）１体を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
