--- a/rush.yaml
+++ b/rush.yaml
@@ -18471,7 +18471,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -19091,7 +19090,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -24262,7 +24260,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -29326,7 +29323,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -54743,7 +54739,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -67762,7 +67757,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -99770,7 +99764,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -100009,7 +100002,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -107287,6 +107279,7 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
+- Unclassified
 - Continuous
 effect:
   en: |-
@@ -107467,6 +107460,7 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
+- Unclassified
 - Continuous
 effect:
   en: |-
@@ -107556,6 +107550,7 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
+- Unclassified
 - Continuous
 effect:
   en: |-
@@ -107642,6 +107637,9 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Unclassified
+- Effect
 effect:
   en: |-
     Until the end of your opponent's next turn, this card's name becomes "Harpie Lady", and your opponent cannot activate Trap Cards when this card declares an attack.
@@ -107727,6 +107725,9 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
+effect_types:
+- Unclassified
+- Effect
 effect:
   en: |-
     This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
@@ -113967,6 +113968,9 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Unclassified
+- Effect
 effect:
   en: |-
     Destroy all monsters on the field. Then, you can add 1 Galaxy Type monster from your Graveyard to your hand.
@@ -115136,6 +115140,9 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Unclassified
+- Effect
 effect:
   en: |-
     This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
@@ -122665,6 +122672,7 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
+- Unclassified
 - Continuous
 effect:
   en: |-
@@ -124829,7 +124837,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124841,7 +124850,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（地属性／ドラゴン族／攻撃力１８００）１体を選んで手札に加える。
   ko:
   zh-TW:
   zh-CN:
