--- a/rush.yaml
+++ b/rush.yaml
@@ -33186,9 +33186,6 @@ requirement:
     맥시멈 모드: 자신 필드의 앞면 표시의 이 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Special Summon up to 2 monsters from your hand face-up to your field. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
@@ -33522,9 +33519,6 @@ requirement:
     맥시멈 모드: 상대 필드에 앞면 표시 몬스터(레벨 9 이상)가 없을 경우, 패의 몬스터 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy up to 2 monsters on your opponent's field.
@@ -55264,9 +55258,6 @@ requirement:
     자신의 패가 있을 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Special Summon 1 monster from your Graveyard face-up to your field. Then, send 1 card from your hand to the Graveyard.
@@ -80714,9 +80705,6 @@ requirement:
     패의 몬스터(어둠 속성) 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy all monsters on your opponent's field. Destroy this card during the End Phase of this turn.
@@ -85910,9 +85898,6 @@ requirement:
     패의 맥시멈 몬스터 2장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy 1 card on your opponent's field. Then, if this card is in Maximum Mode, draw 2 cards.
@@ -86152,7 +86137,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -86988,9 +86972,6 @@ requirement:
     자신 묘지의 "사이버 드래곤" 1장을 덱 위로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy 1 face-up Level 8 or lower monster with 2400 or more ATK on your opponent's field.
@@ -87079,7 +87060,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -87168,8 +87148,6 @@ requirement:
     없음
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
 effect:
   en: |-
     None
@@ -87673,9 +87651,6 @@ requirement:
     없음
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
@@ -87772,7 +87747,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -87935,7 +87909,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -88176,9 +88149,6 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Gain 500 LP.
@@ -90940,9 +90910,6 @@ requirement:
     이 카드를 일반 소환 / 특수 소환한 자신 메인 페이즈에, 패 1장을 덱 위로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Special Summon 1 "Cyber Dragon" from your Graveyard face-up to your field.
@@ -91404,9 +91371,6 @@ requirement:
     몬스터 3장을 릴리스하고 이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy all monsters on your opponent's field.
@@ -92713,9 +92677,6 @@ requirement:
     패 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card gains ATK equal to [the number of face-up Level 6 or higher monsters on the field] x 600 until the end of this turn. This turn, you can only attack with this card.
@@ -93370,9 +93331,6 @@ requirement:
     이 카드를 일반 소환한 턴에, 자신 묘지의 몬스터(전사족) 2장을 덱으로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card can make up to 3 attacks on monsters during this turn.
@@ -93456,9 +93414,6 @@ requirement:
     이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Equip up to 3 Equip Spell Cards from your Graveyard to a face-up Warrior Type monster(s) on your field.
@@ -96858,9 +96813,6 @@ requirement:
     이 카드를 일반 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Add Beast Type monsters from your Graveyard to your hand equal to [the number of monsters Tributed for the Tribute Summon of this card].
@@ -97315,7 +97267,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -99526,9 +99477,6 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
@@ -100237,9 +100185,6 @@ requirement:
     맥시멈 모드: 자신 묘지에 몬스터(해룡족)가 10장 이상 있을 경우, 패 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card gains ATK equal to [the ATK of 1 face-up monster on your opponent's field] until the end of this turn.
@@ -101087,9 +101032,6 @@ requirement:
     자신 필드에 이 카드 이외의 몬스터가 없을 경우, 패의 맥시멈 몬스터 1장을 상대에게 보여주고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Until the end of your opponent's next turn, while this card is face-up, neither player can Tribute Summon Level 8 or lower monsters in Attack Position.
@@ -103499,9 +103441,6 @@ requirement:
     이 카드를 공격 표시로 어드밴스 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Your opponent chooses 1 card on their field, and you destroy that card.
@@ -103591,9 +103530,6 @@ requirement:
     이 카드를 공격 표시로 어드밴스 소환한 턴에 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Your opponent chooses 1 card on their field, and you destroy 1 other card on the field.
@@ -103755,9 +103691,6 @@ requirement:
     이 카드 이외의 자신 필드의 카드 1장을 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card's name becomes "Cyber Dragon" this turn. Then, you can Special Summon 1 "Cyber Dragon" from your Graveyard face-up to your field.
@@ -107279,7 +107212,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Unclassified
 - Continuous
 effect:
   en: |-
@@ -107368,9 +107300,6 @@ requirement:
     자신 묘지의 몬스터(바람 속성 / 비행야수족) 2장을 덱으로 되돌리고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     1 face-up monster on your field gains 500 ATK until the end of this turn. Then, if this card is in Maximum Mode, inflict 500 damage to your opponent.
@@ -107460,7 +107389,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Unclassified
 - Continuous
 effect:
   en: |-
@@ -107550,7 +107478,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Unclassified
 - Continuous
 effect:
   en: |-
@@ -107637,9 +107564,6 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Unclassified
-- Effect
 effect:
   en: |-
     Until the end of your opponent's next turn, this card's name becomes "Harpie Lady", and your opponent cannot activate Trap Cards when this card declares an attack.
@@ -107725,9 +107649,6 @@ requirement:
     덱 맨 위의 카드를 묘지로 보내고 발동할 수 있다.
   zh-TW:
   zh-CN:
-effect_types:
-- Unclassified
-- Effect
 effect:
   en: |-
     This card's name becomes "Harpie Lady" until the end of your opponent's next turn. Then, you can choose 1 face-up Level 8 or lower monster on your opponent's field. If you do, your opponent cannot attack with that monster during their next turn.
@@ -110884,7 +110805,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -112598,9 +112518,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy 1 Spell/Trap Card on your opponent's field. Then, if you have "Gaia the Dragon Champion" in your Graveyard, you can destroy 1 card on your opponent's field.
@@ -112678,9 +112595,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card's name becomes "Curse of Dragon" this turn. Then, you can Fusion Summon by shuffling this card from your field and 1 monster from your field or Graveyard into the owner's Deck as material.
@@ -112759,9 +112673,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card's name becomes "Gaia The Fierce Knight" this turn. Then, you can Fusion Summon by shuffling this card from your field and 1 monster from your field or Graveyard into the owner's Deck as material.
@@ -113968,9 +113879,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Unclassified
-- Effect
 effect:
   en: |-
     Destroy all monsters on the field. Then, you can add 1 Galaxy Type monster from your Graveyard to your hand.
@@ -115140,9 +115048,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Unclassified
-- Effect
 effect:
   en: |-
     This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
@@ -115224,9 +115129,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This turn, this card's name becomes "Blue-Eyes White Dragon", and if you Fusion Summon "Blue-Eyes Ultimate Dragon", this face-up card can be treated as 2 materials.
@@ -116120,8 +116022,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
 effect:
   en: |-
     None
@@ -116652,9 +116552,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     This card can attack twice during this turn.
@@ -116794,9 +116691,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Draw 1 card.
@@ -118341,9 +118235,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Choose 1 face-up "Yamiruler the Dark Delayer" on your field. While that monster is face-up, it gains 500 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
@@ -119885,7 +119776,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Summoning condition
 - Continuous
 effect:
   en: |-
@@ -120295,6 +120185,68 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1001997
 ---
+konami_id: 19735
+name:
+  en: Ecliceras Drakon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクリケラス・ドラコーン
+  ja_romaji: Ekurikerasu Dorakōn
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    The total Levels of the face-up monsters on your opponent's field are 10 or higher during your Main Phase that you Normal Summoned or Special Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    相手フィールドの表側表示モンスターのレベルの合計が１０以上の場合、このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 DARK Attribute Dragon Type or Fiend Type monster with 1200 DEF from your Graveyard to your hand. Your Level 6 or lower Effect Monsters cannot attack this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地のモンスター（闇属性／ドラゴン族・悪魔族／守備力１２００）１体を選んで手札に加える。このターン、自分は効果モンスター（レベル６以下）で攻撃できない。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Effect
+attribute: DARK
+level: 4
+atk: 1200
+def: 0
+images:
+- index: 1
+  image: EclicerasDrakon-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP033
+    set_name: Saikyō Jump December 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1019081
+---
 konami_id:
 name:
   en: Celeb Rose Wiz
@@ -120400,9 +120352,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Excavate the top 4 cards of your Deck. You can add 1 excavated "Meteor Dragon" or 1 excavated "Meteor Flare Fusion" to your hand. Place the remaining cards on the bottom of your Deck in any order.
@@ -120573,6 +120522,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -121251,68 +121201,6 @@ yugipedia_page_id: 1018842
 ---
 konami_id:
 name:
-  en: Ecliceras Drakon
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: エクリケラス・ドラコーン
-  ja_romaji: Ekurikerasu Dorakōn
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    The total Levels of the face-up monsters on your opponent's field are 10 or higher during your Main Phase that you Normal Summoned or Special Summoned this card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    相手フィールドの表側表示モンスターのレベルの合計が１０以上の場合、このカードを召喚・特殊召喚した自分メインフェイズに発動できる。
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Add 1 DARK Attribute Dragon Type or Fiend Type monster with 1200 DEF from your Graveyard to your hand. Your Level 6 or lower Effect Monsters cannot attack this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    自分の墓地のモンスター（闇属性／ドラゴン族・悪魔族／守備力１２００）１体を選んで手札に加える。このターン、自分は効果モンスター（レベル６以下）で攻撃できない。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Dragon / Effect
-attribute: DARK
-level: 4
-atk: 1200
-def: 0
-images:
-- index: 1
-  image: EclicerasDrakon-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP033
-    set_name: Saikyō Jump December 2023 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1019081
----
-konami_id:
-name:
   en: Owlchannel
   de:
   es:
@@ -121540,9 +121428,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Destroy 1 card on your opponent's field. Then, you can make this card gain ATK equal to [the original Level of the monster destroyed by this effect] x 200 until the end of this turn.
@@ -122360,6 +122245,7 @@ sets:
     set_name: Red Reboot of Darkness
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -122672,7 +122558,6 @@ requirement:
   zh-TW:
   zh-CN:
 effect_types:
-- Unclassified
 - Continuous
 effect:
   en: |-
@@ -123275,8 +123160,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
 effect:
   en: |-
     None
@@ -124073,9 +123956,6 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
-effect_types:
-- Summoning condition
-- Effect
 effect:
   en: |-
     Add 2 Level 10 monsters from your Graveyard to your hand. Then, return this card to the owner's hand.
