--- a/data/cards/31444249.yaml
+++ b/data/cards/31444249.yaml
@@ -40,6 +40,9 @@ series:
 images:
 - index: 1
   image: VoidImagination-CORE-EN-SR-1E.png
+  illustration: VoidImagination-MADU-EN-VG-artwork.png
+- index: 2
+  image: VoidImagination-TW01-JP-OP.png
 sets:
   en:
   - set_number: CORE-EN063
@@ -72,6 +75,15 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: TW01-JP116
+    set_name: Terminal World (set)
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Ultra Rare
+    - Ultra Parallel Rare
+    - Secret Rare
+    - Secret Parallel Rare
   ko:
   - set_number: CORE-KR063
     set_name: Clash of Rebellions
