--- a/data/rush/yugipedia1018842.yaml
+++ b/data/rush/yugipedia1018842.yaml
@@ -31,9 +31,12 @@ attribute: LIGHT
 level: 7
 atk: 2500
 def: 2300
+images:
+- index: 1
+  image: Seiyaryu-RDDK01-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP00?
+  - set_number: RD/DK01-JP001
     set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
     rarities:
     - Super Rare
