--- a/data/rush/yugipedia1019464.yaml
+++ b/data/rush/yugipedia1019464.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, you take no damage from your opponent's Trap Card effects. Then, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
+    You take no damage from your opponent's Trap Card effects this turn. Also, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
   de:
   es:
   fr:
