--- a/rush.yaml
+++ b/rush.yaml
@@ -104258,7 +104258,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    During your opponent's Main Phase, you take no damage from your opponent's card effects.
+    You take no damage from your opponent's card effects during your opponent's Main Phase.
   de:
   es:
   fr:
@@ -121075,7 +121075,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent can only declare an attack once this turn. Then, you can take control of 1 face-up Level 9 or higher Magical Knight Type Fusion Monster whose original ATK is 3000 on your opponent's field.
+    Your opponent can only declare an attack once this turn. Also, you can take control of 1 face-up Level 9 or higher Magical Knight Type Fusion Monster whose original ATK is 3000 on your opponent's field.
   de:
   es:
   fr:
@@ -121231,7 +121231,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, you take no damage from your opponent's Trap Card effects. Then, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
+    You take no damage from your opponent's Trap Card effects this turn. Also, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
   de:
   es:
   fr:
