--- a/data/rush/yugipedia1024563.yaml
+++ b/data/rush/yugipedia1024563.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, and you take no damage from your opponent's card effects.
+    Destroy 1 monster on your opponent's field. Then, if your LP are 2000 or lower, this turn, you take no battle damage, and take no damage from your opponent's card effects.
   de:
   es:
   fr:
