--- a/rush.yaml
+++ b/rush.yaml
@@ -124885,3 +124885,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1025190
+---
+konami_id:
+name:
+  en: Autumn Leaves of Blisstopia
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>透<rt>とう</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>郷<rt>きょう</rt></ruby>の<ruby>錦<rt>きん</rt></ruby><ruby>綉<rt>しゅう</rt></ruby>
+  ja_romaji: Tōgenkyō no Kinshū
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Activate this card by placing 1 Wyrm Type monster from your Graveyard on top of your Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    While this card is face-up in the Field Zone, face-up Wyrm Type monsters on the field gain 300 ATK, and if they attack a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Field
+series:
+- Blisstopia
+images:
+- index: 1
+  image: AutumnLeavesofBlisstopia-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP053
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1025257
