--- a/data/rush/yugipedia1025257.yaml
+++ b/data/rush/yugipedia1025257.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードは、自分の墓地のモンスター（幻竜族）１体をデッキの上に戻して発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、お互いのフィールドの表側表示モンスター（幻竜族）の攻撃力は３００アップし、その攻撃は貫通する。
   ko:
   zh-TW:
   zh-CN:
