--- a/data/rush/18691.yaml
+++ b/data/rush/18691.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, this card gains 1000 ATK until the end of this turn. If the result is tails, send this card from your field to the Graveyard and draw 1 card.
+    Toss a coin. If the result is heads, this card gains 1000 ATK until the end of this turn. If the result is tails, send this card from your field to the Graveyard, and draw 1 card.
   de:
   es:
   fr:
