--- a/data/rush/19133.yaml
+++ b/data/rush/19133.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Wyrm Type monsters on your field]. Then, you can add 1 "Demolition Soldier Hell Met" or Field Spell Card from your Graveyard to your hand.
+    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Wyrm Type monsters on your field]. Then, you can add 1 "Demolition Soldier Hell Met" or 1 Field Spell Card from your Graveyard to your hand.
   de:
   es:
   fr:
