--- a/data/cards/03594985.yaml
+++ b/data/cards/03594985.yaml
@@ -72,6 +72,8 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
+  name:
+    en: true
   text:
     en: true
 yugipedia_page_id: 1012228
