--- a/data/cards/99307040.yaml
+++ b/data/cards/99307040.yaml
@@ -54,6 +54,8 @@ limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
 is_translation_unofficial:
+  name:
+    en: true
   text:
     en: true
 yugipedia_page_id: 1012422
