--- a/data/rush/16572.yaml
+++ b/data/rush/16572.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up Level 5 or higher monster from your field to the owner's hand. If you returned a monster to the hand by this effect, then negate the attack.
+    Return 1 face-up Level 5 or higher monster from your field to the owner's hand. Then, if you returned a monster to the hand by this effect, negate the attack.
   de:
   es:
   fr:
