--- a/data/rush/17890.yaml
+++ b/data/rush/17890.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, inflict 1000 damage to your opponent. If the result is tails, you take 1000 damage.
+    Toss a coin. If the result is heads, inflict 1000 damage to your opponent. If the result is tails, take 1000 damage.
   de:
   es:
   fr:
