--- a/data/rush/18271.yaml
+++ b/data/rush/18271.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters with 1000 ATK and DEF in your Graveyard] x 300 until the end of this turn.
+    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters with 1000 ATK/1000 DEF in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
