--- a/data/rush/18689.yaml
+++ b/data/rush/18689.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. If a Level 6 Fiend Type monster(s) is among the cards sent, draw 1 card.
+    Send the top 3 cards of your Deck to the Graveyard. Then, if a Level 6 Fiend Type monster(s) is among the cards sent, draw 1 card.
   de:
   es:
   fr:
