--- a/data/rush/19424.yaml
+++ b/data/rush/19424.yaml
@@ -40,7 +40,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+    This turn, this card's name becomes "Blue-Eyes White Dragon", and gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
   de:
   es:
   fr:
