--- a/rush.yaml
+++ b/rush.yaml
@@ -33278,7 +33278,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, it can attack all monsters on the opponent's field once each, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, can attack all monsters on the opponent's field once each, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -33367,7 +33367,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Return 1 face-up Level 5 or higher monster from your field to the owner's hand. If you returned a monster to the hand by this effect, then negate the attack.
+    Return 1 face-up Level 5 or higher monster from your field to the owner's hand. Then, if you returned a monster to the hand by this effect, negate the attack.
   de:
   es:
   fr:
@@ -53279,7 +53279,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card and send the top card of your Deck to the Graveyard. If you sent a monster to the Graveyard by this effect, you can destroy 2 face-up monsters on your opponent's field with the same Type as that monster.
+    Draw 1 card, and send the top card of your Deck to the Graveyard. If you sent a monster to the Graveyard by this effect, you can destroy 2 face-up monsters on your opponent's field with the same Type as that monster.
   de:
   es:
   fr:
@@ -63457,7 +63457,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster with 2500 or more ATK and 2500 or more DEF on your field gains 2500 ATK until the end of this turn. Then, destroy 1 Spell/Trap Card on your opponent's field. This turn, you can only attack with 1 monster.
+    1 face-up monster with 2500 or more ATK/2500 or more DEF on your field gains 2500 ATK until the end of this turn. Then, destroy 1 Spell/Trap Card on your opponent's field. This turn, you can only attack with 1 monster.
   de:
   es:
   fr:
@@ -75096,7 +75096,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, inflict 1000 damage to your opponent. If the result is tails, you take 1000 damage.
+    Toss a coin. If the result is heads, inflict 1000 damage to your opponent. If the result is tails, take 1000 damage.
   de:
   es:
   fr:
@@ -83349,7 +83349,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters with 1000 ATK and DEF in your Graveyard] x 300 until the end of this turn.
+    All face-up monsters on your opponent's field lose ATK equal to [the number of monsters with 1000 ATK/1000 DEF in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
@@ -83836,7 +83836,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 monster with 500 DEF from your hand face-up to your field. This turn, it gains 500 ATK, it cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    Special Summon 1 Level 8 monster with 500 DEF from your hand face-up to your field. This turn, it gains 500 ATK, cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -84303,7 +84303,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 100 ATK and 1500 DEF, and it cannot be destroyed by your opponent's Trap Card effects.
+    The equipped monster gains 100 ATK/1500 DEF, and it cannot be destroyed by your opponent's Trap Card effects.
   de:
   es:
   fr:
@@ -88568,7 +88568,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send this card from your field to the Graveyard and draw 1 card. Then, if you have 3 or less monsters in your Graveyard, draw 1 card.
+    Send this card from your field to the Graveyard, and draw 1 card. Then, if you have 3 or less monsters in your Graveyard, draw 1 card.
   de:
   es:
   fr:
@@ -97340,7 +97340,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. If a Level 6 Fiend Type monster(s) is among the cards sent, draw 1 card.
+    Send the top 3 cards of your Deck to the Graveyard. Then, if a Level 6 Fiend Type monster(s) is among the cards sent, draw 1 card.
   de:
   es:
   fr:
@@ -97482,7 +97482,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin. If the result is heads, this card gains 1000 ATK until the end of this turn. If the result is tails, send this card from your field to the Graveyard and draw 1 card.
+    Toss a coin. If the result is heads, this card gains 1000 ATK until the end of this turn. If the result is tails, send this card from your field to the Graveyard, and draw 1 card.
   de:
   es:
   fr:
@@ -97890,7 +97890,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, you can Special Summon 1 "Nimble Lemming" from among the cards sent to the Graveyard by this effect, face-up to your field.
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can Special Summon 1 "Nimble Lemming" from among the cards sent to the Graveyard by this effect face-up to your field.
   de:
   es:
   fr:
@@ -108518,7 +108518,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck and you have no other monsters on your field.
+    You have 10 or more cards in your Deck and have no other monsters on your field.
   de:
   es:
   fr:
@@ -109874,7 +109874,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Wyrm Type monsters on your field]. Then, you can add 1 "Demolition Soldier Hell Met" or Field Spell Card from your Graveyard to your hand.
+    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Wyrm Type monsters on your field]. Then, you can add 1 "Demolition Soldier Hell Met" or 1 Field Spell Card from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -115050,7 +115050,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+    This turn, this card's name becomes "Blue-Eyes White Dragon", and gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
   de:
   es:
   fr:
@@ -116680,7 +116680,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    You have 10 or more cards in your Deck and you have "Lightning Voltcondor" face-up on your field.
+    You have 10 or more cards in your Deck and have "Lightning Voltcondor" face-up on your field.
   de:
   es:
   fr:
@@ -121075,7 +121075,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent can only declare an attack once this turn. Also, you can take control of 1 face-up Level 9 or higher Magical Knight Type Fusion Monster whose original ATK is 3000 on your opponent's field.
+    Your opponent can only declare an attack once this turn. Then, you can take control of 1 face-up Level 9 or higher Magical Knight Type Fusion Monster whose original ATK is 3000 on your opponent's field.
   de:
   es:
   fr:
@@ -121231,7 +121231,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    You take no damage from your opponent's Trap Card effects this turn. Also, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
+    You take no damage from your opponent's Trap Card effects this turn. Then, you can add 1 Winged Beast Type monster with 2200 ATK from your Graveyard to your hand.
   de:
   es:
   fr:
