--- a/data/rush/18295.yaml
+++ b/data/rush/18295.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, neither player can Special Summon Level 7 or 8 monsters from the Graveyard.
+    Neither player can Special Summon Level 7 or 8 monsters from the Graveyard this turn.
   de:
   es:
   fr:
