--- a/data/rush/18360.yaml
+++ b/data/rush/18360.yaml
@@ -42,7 +42,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
+    Shuffle 1 face-up Level 6 monster from your field and 1 face-up Level 7 or 8 monster from your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
