--- a/data/rush/18399.yaml
+++ b/data/rush/18399.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. During the End Phase of this turn, take damage equal to [the amount of ATK gained from this effect].
+    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. Take damage equal to [the amount of ATK gained from this effect] during the End Phase of this turn.
   de:
   es:
   fr:
