--- a/rush.yaml
+++ b/rush.yaml
@@ -59463,7 +59463,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent's monsters with 3000 or more ATK cannot attack this turn. Also, you can shuffle up to 5 Reptile Type monsters from your Graveyard into the Deck.
+    Your opponent's monsters with 3000 or more ATK cannot attack this turn. Then, you can shuffle up to 5 Reptile Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -76659,7 +76659,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 2 cards. Then, send 1 card from your hand to the Graveyard. Also, you can change up to 2 Attack Position monsters on your field to face-up Defense Position.
+    Draw 2 cards. Then, send 1 card from your hand to the Graveyard. Then, you can change up to 2 Attack Position monsters on your field to face-up Defense Position.
   de:
   es:
   fr:
@@ -78291,7 +78291,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 400 ATK until the end of this turn. This turn, this card cannot attack directly, but it can make up to 2 attacks on monsters.
+    This card gains 400 ATK until the end of this turn. This turn, this card cannot attack directly, but can make up to 2 attacks on monsters.
   de:
   es:
   fr:
@@ -82280,7 +82280,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Each player with cards in their hand sends their entire hand to the Graveyard. Then, inflict damage to your opponent equal to [the number of cards sent to the Graveyard by this effect] x 200. Also, you can make all face-up monsters on your opponent's field lose ATK equal to [the damage inflicted to your opponent by this effect] until the end of this turn.
+    Each player with cards in their hand sends their entire hand to the Graveyard. Then, inflict damage to your opponent equal to [the number of cards sent to the Graveyard by this effect] x 200. Then, you can make all face-up monsters on your opponent's field lose ATK equal to [the damage inflicted to your opponent by this effect] until the end of this turn.
   de:
   es:
   fr:
@@ -84960,7 +84960,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, neither player can Special Summon Level 7 or 8 monsters from the Graveyard.
+    Neither player can Special Summon Level 7 or 8 monsters from the Graveyard this turn.
   de:
   es:
   fr:
@@ -87653,7 +87653,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Shuffle 1 face-up Level 6 monster on your field and 1 face-up Level 7 or 8 monster on your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
+    Shuffle 1 face-up Level 6 monster from your field and 1 face-up Level 7 or 8 monster from your opponent's field into the owner's Decks. Your Level 7 or higher monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -89016,7 +89016,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Also, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
+    1 face-up monster on your field cannot be destroyed by your opponent's Trap Card effects this turn. Then, you can Set 1 "Dark Revelation" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -90473,7 +90473,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. During the End Phase of this turn, take damage equal to [the amount of ATK gained from this effect].
+    Fusion Summon a Machine Type monster by sending monsters from your hand and/or field to the Graveyard as material. That monster gains ATK equal to [its original ATK]. Take damage equal to [the amount of ATK gained from this effect] during the End Phase of this turn.
   de:
   es:
   fr:
@@ -100334,7 +100334,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Also, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
+    Until the end of your opponent's next turn, this card cannot be destroyed by battle. Then, you can add 1 Level 10 Maximum Monster/"Super Electromagnetic Maximum"/"B.B.B. - Beast Brave Brandish" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -100537,7 +100537,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Place up to 3 Sea Serpent Type monsters from your Graveyard on the bottom of your Deck in any order. Also, you can Special Summon 1 Level 4 or lower Sea Serpent Type monster from your Graveyard to your field in face-up Attack Position. Then, if you have no monsters in your Graveyard, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+    Place up to 3 Sea Serpent Type monsters from your Graveyard on the bottom of your Deck in any order. Then, you can Special Summon 1 Level 4 or lower Sea Serpent Type monster from your Graveyard to your field in face-up Attack Position. Then, if you have no monsters in your Graveyard, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
   de:
   es:
   fr:
@@ -104327,7 +104327,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card can attack twice during this turn. Also, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. If you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
+    This card can attack twice during this turn. Then, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. If you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -104694,7 +104694,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. This card cannot be destroyed by your opponent's Trap Card effects this turn. Also, you can make this card gain ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
+    Send the top 3 cards of your Deck to the Graveyard. This card cannot be destroyed by your opponent's Trap Card effects this turn. Then, you can make this card gain ATK equal to [the number of monsters in your Graveyard] x 300 until the end of this turn.
   de:
   es:
   fr:
@@ -107941,7 +107941,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster gains 800 ATK and 400 DEF. If you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+    The equipped monster gains 800 ATK/400 DEF. If you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
   de:
   es:
   fr:
@@ -113529,7 +113529,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy all face-up monsters with 2500 or less ATK on your opponent's field. Also, this card gains ATK equal to [the number of monsters destroyed by this effect] x 500 until the end of this turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
+    Destroy all face-up monsters with 2500 or less ATK on your opponent's field. Then, this card gains ATK equal to [the number of monsters destroyed by this effect] x 500 until the end of this turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
   de:
   es:
   fr:
@@ -117783,7 +117783,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up monster on your field gains 900 ATK, and your opponent cannot activate Trap Cards when it declares an attack. Also, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
+    This turn, 1 face-up monster on your field gains 900 ATK, and your opponent cannot activate Trap Cards when it declares an attack. Then, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
   de:
   es:
   fr:
@@ -120680,7 +120680,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by your opponent's card effects, and its Level is increased by 1. Also, you can shuffle up to 1 face-down card from your opponent's field into the owner's Deck for every 3 cards sent to the Graveyard to meet the requirement.
+    Until the end of your opponent's next turn, this card cannot be destroyed by your opponent's card effects, and its Level is increased by 1. Then, you can shuffle up to 1 face-down card from your opponent's field into the owner's Deck for every 3 cards sent to the Graveyard to meet the requirement.
   de:
   es:
   fr:
@@ -124945,3 +124945,64 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1025257
+---
+konami_id:
+name:
+  en: Fusion Cancel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: フュージョンキャンセル
+  ja_romaji: Fyūjon Kyanseru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a monster(s) is destroyed by battle.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分または相手のモンスターが戦闘で破壊された時に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Return 1 face-up Fusion Monster on the field to the owner's Extra Deck. Then, its owner can Special Summon all of the monsters that are mentioned on the returned monster as material by name from their Graveyard face-up to their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分または相手フィールドの表側表示のフュージョンモンスター１体を選んで持ち主のＥＸデッキに戻す。その後、戻されたモンスターの持ち主は、自身の墓地からそのモンスターに素材としてカード名が記されたモンスター一組を選んで自身のフィールドに表側表示で特殊召喚できる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Fusion
+images:
+- index: 1
+  image: FusionCancel-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP066
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 106991
