--- a/data/cards/31764700.yaml
+++ b/data/cards/31764700.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Non può essere Evocato Normalmente o Posizionato. Deve essere Evocato Specialmente da "Yubel - Terrore Incarnato", e non può essere Evocato Specialmente in altri modi. Questa carta non può essere distrutta in battaglia. Non subisci danni da combattimento da battaglie che coinvolgono questa carta. Alla fine del Damage Step, se questa carta scoperta e in Posizione di Attacco combatte con un mostro del tuo avversario: infliggi al tuo avversario danni pari all'ATK di quel mostro, inoltre distruggi quel mostro.
   pt: |-
-    Não pode ser Invocado por Invocação-Normal ou Baixado. Deve ser Invocado por Invocação-Especial por "Yubel - Encarnação do Terror" e não pode ser Invocado por Invocação-Especial de nenhuma outra forma. Este card não pode ser destruído em batalha. Você não sofre Dano de Batalha de batalhas envolvendo este card. No final da Etapa de Dano, se este card com a face para cima em Posição de Ataque batalhou com um monstro do oponente: Cause dano igual ao ATK desse monstro ao seu oponente e, além disso, destrua esse monstro.
+    Não pode ser Invocado por Invocação-Normal ou Baixado. Deve ser Invocado por Invocação-Especial por "Yubel - Encarnação do Terror". Não pode ser destruído em batalha. Você não sofre dano de batalha das batalhas envolvendo este card. No final da Etapa de Dano, se este card com a face para cima em Posição de Ataque batalhou um monstro do oponente: cause dano igual ao ATK desse monstro ao seu oponente e, além disso, destrua esse monstro.
   ja: |-
     このカードは通常召喚できない。「ユベル－Ｄａｓ Ａｂｓｃｈｅｕｌｉｃｈ Ｒｉｔｔｅｒ」の効果でのみ特殊召喚できる。このカードは戦闘では破壊されず、このカードの戦闘によって発生する自分への戦闘ダメージは０になる。フィールド上に表側攻撃表示で存在するこのカードが相手モンスターと戦闘を行ったダメージステップ終了時、相手モンスターの攻撃力分のダメージを相手ライフに与え、そのモンスターを破壊する。
   ko: |-
